--- a/WindowMuter/WindowMuter/packages.config
+++ b/WindowMuter/WindowMuter/packages.config
@@ -11,6 +11,8 @@
   <package id="Eagle.CLRv4.Core" version="1.0.8503.24499" targetFramework="net472" />
   <package id="Harpy.CLRv4" version="1.0.8503.24499" targetFramework="net472" />
   <package id="HotKey" version="1.0.8503.24499" targetFramework="net472" />
+  <package id="ILMerge" version="3.0.41" targetFramework="net472" />
+  <package id="ILRepack" version="2.0.18" targetFramework="net472" />
   <package id="Microsoft.Win32.Registry" version="4.7.0" targetFramework="net472" />
   <package id="NAudio" version="2.2.1" targetFramework="net472" />
   <package id="NAudio.Asio" version="2.2.1" targetFramework="net472" />
